# mcp_deepmen0

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
src/mem0_mcp_selfhosted/: __init__.py  chunking.py  config.py  document_source.py  image_extract.py  ingest_queue.py  ingest_worker.py  pdf_extract.py  server.py
src/mem0_mcp_selfhosted/vault/: __init__.py  i18n.py  main.py  middleware.py  security.py  store.py  web.py
src/mem0_mcp_selfhosted/vault/static/: vault-copy.js  vault.css
src/mem0_mcp_selfhosted/vault/templates/: audit.html  base.html  dashboard.html  login.html  shell.html  user.html
src/mem0_mcp_selfhosted/vault/templates/partials/: lang_toggle.html  token_modal.html
tests/: conftest.py  pdf_builder.py
tests/contract/: test_mem0ai_internals.py  test_vault_asgi_contract.py
tests/integration/: test_hooks.py
tests/unit/: test_chunking.py  test_config.py  test_config_matrix.py  test_document_source.py  test_estimate_wait.py  test_hooks.py  test_image_extract.py  test_ingest_queue.py  test_ingest_worker.py  test_ingest_worker_document.py  test_ingest_worker_update.py  test_ingest_worker_vision.py  test_llm_ollama.py  test_mcp_protocol.py  test_memory_scope.py  test_pdf_extract.py  test_server.py  test_server_add_document.py  test_vault_main.py  test_vault_middleware.py  test_vault_no_extra.py  test_vault_security.py  test_vault_store.py  test_vault_web.py
